estilo do formulário

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                         <label for="isenha">Senha</label>
                     </div>
 
-                    <p>
-                        <input type="submit" value="Entrar">
-                        <a href="esqueci.html">
-                            Esqueci a senha <span class="material-symbols-outlined">mail</span>
+                    
+                    <input type="submit" value="Entrar" id="submit">
+                    <a href="esqueci.html" class="botao">
+                        Esqueci a senha <span class="material-symbols-outlined">mail</span>
 
-                        </a>
-                    </p>
+                    </a>
+                    
                 </form>
             </div>
         </section>
